--- a/src/css/style.css
+++ b/src/css/style.css
@@ -271,8 +271,7 @@ a {
 
 .popupWindow__form input[type='submit'] {
     padding: 10px;
-    margin: 0;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 
